<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FrontierApp</string>
    <string name="auth_failed">Authorization has Failed</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_welcome2">Welcome2</string>
    <string name="communcation">Communication</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_homepage">Homepage</string>

    <string-array name="drawer_actiities">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="settings">Settings</string>
    <string name="Logout">Logout</string>
    <string name="post_string">This is a post text text view. Let me type this to the next line. I will type more to make it go to the next line</string>
    <string name="Notifications">Notifications</string>
    <string name="Partners">Partners</string>
    <string name="Connect">Connect</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="circles">Circle</string>
    <string name="aboutMeText">Hard-working web developer with a flair for creating elegant solutions in the least amount of time. Developed an ecommerce webapp, customer web portal, documentary launch website, and donations webapp for a local charity. Passionate about software architecture and cloud computing. Regular attendee of web developer meetups and hackathons.</string>
    <string name="spaces">Spaces</string>
    <string name="feed">Feed</string>
    <string name="assignment_s">Assignment(s)</string>
    <string name="objective_s">Objective(s)</string>
    <string name="member_s">Member(s)</string>

    <string name="quickstart_message">Click the SUBSCRIBE TO NEWS button below to subscribe to the
        news topic. Messages sent to the news topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_news">Subscribe To News</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to news topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <string name="default_notification_channel_name" translatable="true">News</string>
    <string name="msg_subscribe_failed">Failed to subscribe to news topic</string>
    <string name="title_activity_register_main">RegisterMainActivity</string>


</resources>
