<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single">
        <item
            android:title="My Profile"
            android:id="@+id/profile"
            android:icon="@drawable/my_profile"/>

        <item
            android:title="@string/Connect"
            android:id="@+id/Connect"
            android:icon="@drawable/account_network"/>

        <item
            android:id="@+id/navMessages"
            android:icon="@drawable/inbox"
            android:title="Messages" />
        <item
            android:title="@string/Notifications"
            android:id="@+id/notifications"
            android:icon="@drawable/notification"/>

    </group>

    <item
        android:title="@string/circles">
        <menu>

            <item
                android:title="@string/spaces"
                android:id="@+id/Circles"
                android:icon="@drawable/circles"/>

            <item android:id="@+id/connections"
                android:title="My Connections"
                android:icon="@drawable/account_multiple_black"/>

        </menu>

    </item>

    <item
        android:title="Personal Options">
        <menu>
            <item
                android:id="@+id/vbc"
                android:title="Virtual Business Card"
                android:icon="@drawable/vbc"/>
        </menu>
    </item>
</menu>